<resources>
    <string name="app_name">MiniApp2</string>

    <!-- Buttons -->
    <string name="button_play_text">Play</string>
    <string name="button_pause_text">Pause</string>
    <string name="button_stop_text">Stop</string>
    <string name="button_gesturesOn_text">Gestures on</string>
    <string name="button_gesturesOff_text">Gestures off</string>
    <string name="button_exit_text">Exit</string>

    <!-- TextViews -->
    <string name="song_title_text">%1$s</string>
    <string name="song_duration_text">%1$s</string>
    <string name="royalty_text">All songs are royalty-free: https://youtube.com/audiolibrary</string>

    <!-- Notifications -->
    <string name="notification_channel_name">Foreground service channel</string>
    <string name="notification_channel_description">Posts notifications related to the media player service</string>

    <string name="gestures_toast_text">Gestures %1$s</string>
</resources>