<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play_text"
        android:onClick="playButtonOnClickListener"
        app:layout_constraintBottom_toTopOf="@+id/buttonGesturesOn"
        app:layout_constraintEnd_toStartOf="@+id/buttonPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/verticalGuideline2" />

    <Button
        android:id="@+id/buttonPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pause_text"
        android:onClick="pauseButtonOnClickListener"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toStartOf="@+id/buttonStop"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay"
        app:layout_constraintTop_toBottomOf="@+id/verticalGuideline2" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_text"
        android:onClick="stopButtonOnClickListener"
        app:layout_constraintBottom_toTopOf="@+id/buttonGesturesOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPause"
        app:layout_constraintTop_toBottomOf="@+id/verticalGuideline2" />

    <Button
        android:id="@+id/buttonGesturesOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_gesturesOn_text"
        android:onClick="gestureOnButtonOnClickListener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <Button
        android:id="@+id/buttonGesturesOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_gesturesOff_text"
        android:onClick="gestureOffButtonOnClickListener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonExit"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_exit_text"
        android:onClick="exitButtonOnClickListener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonGesturesOff"
        app:layout_constraintStart_toEndOf="@+id/buttonGesturesOn"
        app:layout_constraintTop_toBottomOf="@+id/buttonPause" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/verticalGuideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/song_duration_text"
        app:layout_constraintBottom_toTopOf="@+id/verticalGuideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/verticalGuideline1" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/verticalGuideline2"
        app:layout_constraintEnd_toStartOf="@+id/textDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/verticalGuideline1" />

</androidx.constraintlayout.widget.ConstraintLayout>